<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ticket_identificado"
                    android:id="@+id/label_ticket_type"
                    android:textColor="@color/hint_color"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/switch_icon"
                    android:id="@+id/button_switch_type"
                    android:scaleType="fitCenter"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_rut"
                    android:layout_weight="1"
                    android:hint="@string/rut"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/hint_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="-"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/textView"
                    android:textColor="@color/hint_color"/>

                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_verifier"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColorHint="@color/hint_color"/>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_first_name"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_last_name"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_email"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/hint_color"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_address"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_vehicle"
                android:hint="@string/vehicle"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_license_plate"
                android:hint="@string/license_plate"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_location"
                android:hint="@string/location"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_description"
                android:hint="@string/description"
                android:imeOptions="actionDone"
                android:gravity="top"
                android:textColorHint="@color/hint_color"/>

        </LinearLayout>

        </ScrollView>

</LinearLayout>