<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.puc.parte_electronico"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/background"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/label_color"/>

                <Button
                    android:id="@+id/button_add_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />
            </LinearLayout>

            <com.puc.parte_electronico.layouts.FlowLayout
                android:id="@+id/background_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:horizontalSpacing="20dp"
                app:verticalSpacing="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/evidence"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/label_color"/>

                <Button
                    android:id="@+id/button_add_evidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />
            </LinearLayout>

            <com.puc.parte_electronico.layouts.FlowLayout
                android:id="@+id/evidence_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:horizontalSpacing="20dp"
                app:verticalSpacing="20dp" />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/zoomed_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

</FrameLayout>